--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -22,6 +22,7 @@ allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.219.236.101;
+allow 104.219.236.93;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -89,6 +90,7 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
+allow 107.20.232.12;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -152,7 +154,6 @@ allow 149.56.44.47;
 allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
-allow 156.146.63.135;
 allow 160.119.249.240;
 allow 162.241.121.139;
 allow 162.247.72.192;
@@ -643,7 +644,7 @@ allow 195.80.151.30;
 allow 195.88.74.206;
 allow 196.189.30.114;
 allow 198.144.178.163;
-allow 198.167.193.205;
+allow 198.167.193.169;
 allow 198.23.133.132;
 allow 198.251.84.163;
 allow 198.251.84.237;
@@ -659,7 +660,6 @@ allow 198.98.48.33;
 allow 198.98.49.203;
 allow 198.98.50.199;
 allow 198.98.51.189;
-allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
 allow 199.195.249.214;
@@ -924,7 +924,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:2700:0:2:a800:ff:fe47:e25f;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
-allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:44f::1;
@@ -1055,6 +1054,7 @@ allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:7aa0:5000::1ec;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c206:2161:161::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1356,7 +1356,6 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
-allow 2a12:5940:1182::2;
 allow 2a12:5940:13e2::2;
 allow 2a12:5940:144f::2;
 allow 2a12:5940:4462::2;
@@ -1380,7 +1379,6 @@ allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
-allow 3.225.28.196;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
@@ -1496,7 +1494,6 @@ allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1568,7 +1565,6 @@ allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
 allow 79.137.195.103;
-allow 79.137.196.72;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1594,6 +1590,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.247.165.52;
 allow 84.247.165.53;
 allow 84.54.51.61;
 allow 84.54.51.68;
