--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -22,6 +22,7 @@ set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.219.236.101;
+set_real_ip_from 104.219.236.93;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -89,6 +90,7 @@ set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
+set_real_ip_from 107.20.232.12;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -152,7 +154,6 @@ set_real_ip_from 149.56.44.47;
 set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
-set_real_ip_from 156.146.63.135;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.241.121.139;
 set_real_ip_from 162.247.72.192;
@@ -643,7 +644,7 @@ set_real_ip_from 195.80.151.30;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.189.30.114;
 set_real_ip_from 198.144.178.163;
-set_real_ip_from 198.167.193.205;
+set_real_ip_from 198.167.193.169;
 set_real_ip_from 198.23.133.132;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
@@ -659,7 +660,6 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
-set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
 set_real_ip_from 199.195.249.214;
@@ -924,7 +924,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe47:e25f;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
-set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:44f::1;
@@ -1055,6 +1054,7 @@ set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:7aa0:5000::1ec;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
+set_real_ip_from 2a02:c206:2161:161::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:ec0:209:10::4;
 set_real_ip_from 2a02:ed06::222;
@@ -1356,7 +1356,6 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
-set_real_ip_from 2a12:5940:1182::2;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:4462::2;
@@ -1380,7 +1379,6 @@ set_real_ip_from 31.13.189.118;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.227;
-set_real_ip_from 3.225.28.196;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.187.5.192;
@@ -1496,7 +1494,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1568,7 +1565,6 @@ set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.195.103;
-set_real_ip_from 79.137.196.72;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
@@ -1594,6 +1590,7 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
+set_real_ip_from 84.247.165.52;
 set_real_ip_from 84.247.165.53;
 set_real_ip_from 84.54.51.61;
 set_real_ip_from 84.54.51.68;
