--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -22,7 +22,6 @@ allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.236.100;
 allow 104.219.236.101;
-allow 104.219.236.93;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -90,7 +89,7 @@ allow 107.189.8.238;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
-allow 107.20.232.12;
+allow 108.181.124.143;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -112,7 +111,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 124.217.247.210;
 allow 125.212.241.131;
 allow 128.127.180.156;
@@ -155,6 +153,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.241.121.139;
 allow 162.247.72.192;
 allow 162.247.72.199;
@@ -660,6 +659,7 @@ allow 198.98.48.33;
 allow 198.98.49.203;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
 allow 199.195.249.214;
@@ -706,7 +706,6 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
-allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -785,7 +784,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:634:2177::1;
@@ -825,6 +823,7 @@ allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.136.84.104;
 allow 213.232.235.83;
+allow 213.252.140.118;
 allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
@@ -846,7 +845,6 @@ allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.251.61;
 allow 23.137.251.62;
-allow 23.137.254.12;
 allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
@@ -891,7 +889,7 @@ allow 2.58.95.45;
 allow 2.58.95.47;
 allow 2.58.95.53;
 allow 2.58.95.59;
-allow 2600:3c00:e000:4ee::3;
+allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2602:2e5::104;
@@ -924,6 +922,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:2700:0:2:a800:ff:fe47:e25f;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
+allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
 allow 2605:6400:10:44f::1;
@@ -1379,10 +1378,10 @@ allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
+allow 3.220.208.25;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
-allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.24;
 allow 37.228.129.63;
@@ -1590,6 +1589,7 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
+allow 84.247.165.51;
 allow 84.247.165.52;
 allow 84.247.165.53;
 allow 84.54.51.61;
@@ -1635,7 +1635,6 @@ allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
-allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
@@ -1665,7 +1664,6 @@ allow 93.95.230.165;
 allow 93.95.230.54;
 allow 93.99.104.128;
 allow 93.99.104.18;
-allow 94.102.51.15;
 allow 94.103.124.184;
 allow 94.140.115.63;
 allow 94.142.241.194;
