--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -22,7 +22,6 @@ set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
 set_real_ip_from 104.219.236.101;
-set_real_ip_from 104.219.236.93;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -90,7 +89,7 @@ set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
-set_real_ip_from 107.20.232.12;
+set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -112,7 +111,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 124.217.247.210;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
@@ -155,6 +153,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.241.121.139;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
@@ -660,6 +659,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
 set_real_ip_from 199.195.249.214;
@@ -706,7 +706,6 @@ set_real_ip_from 2001:678:e3c::a;
 set_real_ip_from 2001:678:e3c::b;
 set_real_ip_from 2001:678:e3c::c;
 set_real_ip_from 2001:678:e3c::d;
-set_real_ip_from 2001:67c:2044:1905::26;
 set_real_ip_from 2001:67c:2608::1;
 set_real_ip_from 2001:67c:289c::20;
 set_real_ip_from 2001:67c:289c:2::234;
@@ -785,7 +784,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:634:2177::1;
@@ -825,6 +823,7 @@ set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
 set_real_ip_from 213.136.84.104;
 set_real_ip_from 213.232.235.83;
+set_real_ip_from 213.252.140.118;
 set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
@@ -846,7 +845,6 @@ set_real_ip_from 23.137.249.8;
 set_real_ip_from 23.137.250.34;
 set_real_ip_from 23.137.251.61;
 set_real_ip_from 23.137.251.62;
-set_real_ip_from 23.137.254.12;
 set_real_ip_from 23.152.24.77;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
@@ -891,7 +889,7 @@ set_real_ip_from 2.58.95.45;
 set_real_ip_from 2.58.95.47;
 set_real_ip_from 2.58.95.53;
 set_real_ip_from 2.58.95.59;
-set_real_ip_from 2600:3c00:e000:4ee::3;
+set_real_ip_from 2600:3c00:e000:4ee::2;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
 set_real_ip_from 2602:2e5::104;
@@ -924,6 +922,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe47:e25f;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
+set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
 set_real_ip_from 2605:6400:10:44f::1;
@@ -1379,10 +1378,10 @@ set_real_ip_from 31.13.189.118;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
 set_real_ip_from 31.42.185.227;
+set_real_ip_from 3.220.208.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.187.5.192;
-set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.131;
 set_real_ip_from 37.228.129.24;
 set_real_ip_from 37.228.129.63;
@@ -1590,6 +1589,7 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
+set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.247.165.52;
 set_real_ip_from 84.247.165.53;
 set_real_ip_from 84.54.51.61;
@@ -1635,7 +1635,6 @@ set_real_ip_from 91.193.18.63;
 set_real_ip_from 91.203.144.194;
 set_real_ip_from 91.203.5.115;
 set_real_ip_from 91.203.5.118;
-set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
 set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
@@ -1665,7 +1664,6 @@ set_real_ip_from 93.95.230.165;
 set_real_ip_from 93.95.230.54;
 set_real_ip_from 93.99.104.128;
 set_real_ip_from 93.99.104.18;
-set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.103.124.184;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
