--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -127,7 +127,6 @@ allow 138.201.203.206;
 allow 138.59.18.110;
 allow 139.99.172.11;
 allow 141.239.149.94;
-allow 141.98.11.62;
 allow 142.44.234.69;
 allow 143.42.110.237;
 allow 143.42.199.223;
@@ -156,12 +155,9 @@ allow 160.119.249.240;
 allow 161.35.129.51;
 allow 162.241.121.139;
 allow 162.247.72.192;
-allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
-allow 162.247.74.202;
 allow 162.247.74.204;
-allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
 allow 162.247.74.217;
@@ -460,7 +456,6 @@ allow 185.220.103.5;
 allow 185.220.103.6;
 allow 185.220.103.7;
 allow 185.220.103.8;
-allow 185.220.103.9;
 allow 185.225.226.77;
 allow 185.225.69.203;
 allow 185.225.69.232;
@@ -524,7 +519,7 @@ allow 188.214.104.21;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 189.147.255.75;
+allow 189.147.242.122;
 allow 190.103.179.98;
 allow 190.120.229.98;
 allow 190.211.254.97;
@@ -681,7 +676,6 @@ allow 2001:1b60:3:239:1003:106:0:1;
 allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:2:9161::1;
-allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
 allow 2001:41d0:601:1100::108e;
@@ -706,6 +700,7 @@ allow 2001:678:e3c::a;
 allow 2001:678:e3c::b;
 allow 2001:678:e3c::c;
 allow 2001:678:e3c::d;
+allow 2001:67c:2044:1905::26;
 allow 2001:67c:2608::1;
 allow 2001:67c:289c::20;
 allow 2001:67c:289c:2::234;
@@ -910,7 +905,6 @@ allow 2602:fc24:18:1c54::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
-allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
 allow 2603:3:610a:5050::;
@@ -1351,8 +1345,8 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1378,10 +1372,10 @@ allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
-allow 3.220.208.25;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
+allow 37.228.129.128;
 allow 37.228.129.131;
 allow 37.228.129.24;
 allow 37.228.129.63;
@@ -1390,6 +1384,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
+allow 44.219.230.38;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
@@ -1586,6 +1581,7 @@ allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.96.213.63;
 allow 83.97.20.77;
+allow 83.97.79.150;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
@@ -1635,6 +1631,7 @@ allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.5.115;
 allow 91.203.5.118;
+allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
 allow 91.208.75.156;
@@ -1643,7 +1640,6 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
-allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
@@ -1664,6 +1660,7 @@ allow 93.95.230.165;
 allow 93.95.230.54;
 allow 93.99.104.128;
 allow 93.99.104.18;
+allow 94.102.51.15;
 allow 94.103.124.184;
 allow 94.140.115.63;
 allow 94.142.241.194;
