--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -869,6 +869,7 @@ allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
+allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -890,6 +891,7 @@ allow 2.58.95.59;
 allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
+allow 2602:2e5::104;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
@@ -1375,7 +1377,6 @@ allow 31.13.189.118;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.227;
-allow 3.228.124.17;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.187.5.192;
@@ -1388,6 +1389,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.239.62;
 allow 38.97.116.244;
+allow 44.192.0.126;
 allow 45.128.232.102;
 allow 45.128.232.170;
 allow 45.132.246.245;
