--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -123,6 +123,7 @@ allow 2402:1f00:8100:400::9;
 allow 2600:3c00:e000:4ee::2;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
+allow 2602:2e5::104;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
