--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -869,6 +869,7 @@ deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
+deny 23.155.8.104;
 deny 23.184.48.101;
 deny 23.184.48.127;
 deny 23.184.48.128;
@@ -890,6 +891,7 @@ deny 2.58.95.59;
 deny 2600:3c00:e000:4ee::2;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::2;
+deny 2602:2e5::104;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:4441::1;
@@ -1375,7 +1377,6 @@ deny 31.13.189.118;
 deny 31.220.87.46;
 deny 31.220.98.139;
 deny 31.42.185.227;
-deny 3.228.124.17;
 deny 35.0.127.52;
 deny 37.120.166.23;
 deny 37.187.5.192;
@@ -1388,6 +1389,7 @@ deny 37.48.120.196;
 deny 37.48.70.156;
 deny 38.242.239.62;
 deny 38.97.116.244;
+deny 44.192.0.126;
 deny 45.128.232.102;
 deny 45.128.232.170;
 deny 45.132.246.245;
