--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -123,6 +123,7 @@ set_real_ip_from 2402:1f00:8100:400::9;
 set_real_ip_from 2600:3c00:e000:4ee::2;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:fbf6:11:27::3;
 set_real_ip_from 2602:fc24:11:26c3::1;
 set_real_ip_from 2602:fc24:11:4441::1;
