--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -510,6 +510,7 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.70.8.45;
+allow 185.70.8.46;
 allow 185.7.33.146;
 allow 185.82.127.128;
 allow 185.82.219.109;
@@ -790,7 +791,6 @@ allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
-allow 202.61.226.98;
 allow 202.69.76.36;
 allow 204.194.29.4;
 allow 204.8.156.142;
@@ -817,7 +817,6 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
-allow 212.51.128.10;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
@@ -1075,7 +1074,6 @@ allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
 allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
-allow 2a03:4000:56:91:480a:eeff:fea8:f9c6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
 allow 2a03:4000:62:8:c855:23ff:fef6:50ee;
 allow 2a03:4000:6:4015:8841:50ff:fe0d:719c;
@@ -1139,6 +1137,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:26c0:d1:12:acdc:feed:beef:66;
+allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1352,6 +1351,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1570,7 +1570,6 @@ allow 81.17.28.95;
 allow 81.19.137.127;
 allow 82.118.242.158;
 allow 82.118.242.16;
-allow 82.153.138.120;
 allow 82.153.138.48;
 allow 82.153.138.79;
 allow 82.197.182.161;
@@ -1641,6 +1640,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
